--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="icon" type="image/png" href="faviconx.png">
+        <a href="https://ksPhsyics.github.io/">
 
         <link rel="stylesheet" href="style.css">
         <title>Kapeesh's Physics Aid</title>
@@ -20,6 +21,7 @@
          <a href="notes.html">Go to Notes</a>
     </body>
 </html>
+
 
 
 
