--- a/newton.html
+++ b/newton.html
@@ -66,7 +66,7 @@
 θ
  with the horizontal as shown in figure. If the acceleration of the block is 
 a
-, find the force applied by the string and by the table N on the block.<img src="https://d10lpgp6xz60nq.cloudfront.net/physics_images/HCV_VOL1_C05_S01_002_Q01.png"></p>
+, find the force applied by the string and by the table N on the block.</p>
 
     <details>
     <summary><strong>Click here to see the solution</strong></summary>
@@ -189,4 +189,5 @@ Where <strong>m</strong> is the mass of the object, and <strong>a<sub>f</sub></s
 <p>However, if two bodies do not slip then the force of friction is called <strong>static friction</strong>.</p>
 </body>
 </html>
+
 
