--- a/index.html
+++ b/index.html
@@ -19,12 +19,26 @@
             Here, I have included what I have learned in Physics on my own and even some recommendations of books and sources!
         </p>
          <a href="notes.html">Go to Notes</a><h2>Who Am I?</h2>
-         <p>I'm just a physics enthusiast currently in 1st year of high school in New Delhi,India. I am just here to help other enthusiast like me to help them learn physics the right way. Some people show off maths skills in physics but c'mom.
+         <p>I'm just a physics enthusiast currently in 1st year of high school in Jammu,India. I am currently studying in GD GOENKA PUBLIC SCHOOL JAMMU I am just here to help other enthusiast like me to help them learn physics the right way. Some people show off maths skills in physics but c'mon.
          </p>
         <h2>Contact me</h2></h2>
         <p>Got a physics problem for me?, want advice or just want to talk to me; Just email me at:kasudag7@gmail.com </p>
+        <h2>Books and Resources</h2>
+        <p>I'll put my recommended here. Rememember to solve it accordingly.
+        <ul>
+            <li>Concept Of Physics 1,2 By H.C Verma: A great conceptual but rather easy book, but best for starters</li>
+            <li> Resnick Halliday( Idk which one as I have not solved this one personally but I hear it's a great book)</li>
+            <li>Problems In General Physics By I.E Irodov: is a great book and the collection of problems is great but not all problems are releveant so do your research before solving.</li>
+            <li>Pathfinder for Olympiad and JEE (Advanced) Physics: This book is peak, and I MEAN PEAKKKK. It is my favourite book and contains mind boggling and counter intuitive problems.This is a must buy for any physics enthusiast.</li>
+        </ul>
+        Of course the list doesn't end here but these are the only books I solve but I solve them honestly. There are many more books by authors such as David Morin. <h3>Some online teachers are</h3> 
+        <ul><a href="https://oyc.yale.edu/physics/phys-200" target="_blank">Prof. Shankar's Physics Course (Yale)</a>
+</ul>
+    </p>
+        
     </body>
 </html>
+
 
 
 
